--- a/BlazorView/Pages/UserPreference.razor
+++ b/BlazorView/Pages/UserPreference.razor
@@ -77,9 +77,8 @@
                 }
             }
 
-            /*
-            Post user to db
-            */
+            
+            //Post user to db.
             private FormModel _formModel = new();
             private string _name;
             private bool _showUsers = true;
