--- a/BlazorView/Pages/Components/DisplayFullListing.razor
+++ b/BlazorView/Pages/Components/DisplayFullListing.razor
@@ -22,6 +22,9 @@
     [Parameter]
     public EventCallback<bool> ShowFullAdvertisement { get; set; }
 
+    /// <summary>
+    /// Closed button pressed. Closing the full advertisement.
+    /// </summary>
     private void closeFullListing()
     {
         ShowFullAdvertisement.InvokeAsync();
