--- a/BlazorView/Pages/Components/ShowLikedListings.razor
+++ b/BlazorView/Pages/Components/ShowLikedListings.razor
@@ -37,13 +37,13 @@
 
 
 
-        //Interests
+        //Interests.
         private string? _interestsFromDb;
         private IEnumerable<Interest> _interests = new List<Interest>();
         private List<string> _commonInterests = new List<string>();
 
         /// <summary>
-        /// Fetch job listings from database
+        /// Fetch job listings from database.
         /// </summary>
         /// <returns></returns>
         protected override async Task OnInitializedAsync()
@@ -52,7 +52,7 @@
             _advertisementsFromDb = await JobListingsService.FetchJobListings();
             _advertisementList = JsonConvert.DeserializeObject<IEnumerable<Advertisement>>(_advertisementsFromDb);
 
-            // Fetch uninterests TODO: Try to make this global at some point
+            // Fetch uninterests.
             Logger.LogInformation("Fetching Interests from Database, time: {time}", DateTimeOffset.Now);
             _interestsFromDb = await UserListingService.FetchInterest();
             _interests = JsonConvert.DeserializeObject<IEnumerable<Interest>>(_interestsFromDb);
