--- a/BlazorView/Pages/Components/ShowNotLikedListings.razor
+++ b/BlazorView/Pages/Components/ShowNotLikedListings.razor
@@ -35,13 +35,13 @@
 
 
 
-    //Uninterests
+    //Uninterests.
     private string? _uninterestsFromDb;
     private IEnumerable<Interest> _uninterests = new List<Interest>();
     private List<string> _commonUninterests = new List<string>();
 
     /// <summary>
-    /// Fetch job listings from database
+    /// Fetch job listings from database.
     /// </summary>
     /// <returns></returns>
     protected override async Task OnInitializedAsync()
@@ -49,7 +49,7 @@
         _advertisementsFromDb = await JobListingsService.FetchJobListings();
         _advertisementList = JsonConvert.DeserializeObject<IEnumerable<Advertisement>>(_advertisementsFromDb);
 
-        // Fetch uninterests TODO: Try to make this global at some point
+        // Fetch uninterests TODO: Try to make this global at some point.
         Logger.LogInformation("Get uninterests from Database, time: {time}", DateTimeOffset.Now);
         _uninterestsFromDb = await UserListingService.FetchUninterest();
         _uninterests = JsonConvert.DeserializeObject<IEnumerable<Interest>>(_uninterestsFromDb);
